fix player status grid display
- the My Status block had degenerate CSS that was misaligned due to
  forestry-status-dashboard's absolute width
- fix broken logging
- minor instructions changes per decaro

--- a/vcweb/experiment/forestry/static/css/forestry/style.css
+++ b/vcweb/experiment/forestry/static/css/forestry/style.css
@@ -17,8 +17,7 @@
 
 .forestry-status-dashboard {
     height: 95px;
-    width: 125px;
-    margin-right: 35px;
+    width: 140px;
     padding: 8px 8px 8px 8px;
 }
 
